[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/ui/ItemboxHint.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/font/kongtext.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://src/RecipeBrowser.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[node name="RecipeBrowser" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -352.0
margin_top = -368.0
margin_right = 352.0
margin_bottom = 368.0
script = ExtResource( 4 )

[node name="RecipeBrowser" type="ItemList" parent="."]
margin_right = 704.0
margin_bottom = 512.0

[node name="VScrollBar2" type="VScrollBar" parent="RecipeBrowser"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -12.0
margin_top = -256.0
margin_right = 12.0
margin_bottom = 768.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Craft" type="Button" parent="."]
margin_left = 192.0
margin_top = 624.0
margin_right = 704.0
margin_bottom = 720.0
custom_fonts/font = SubResource( 1 )
shortcut_in_tooltip = false
text = "Craft Recipe"

[node name="ResultHint" parent="." instance=ExtResource( 2 )]
position = Vector2( 48, 560 )
base_texture = "result_box"

[node name="Cost1" parent="." instance=ExtResource( 2 )]
position = Vector2( 240, 560 )

[node name="Cost2" parent="." instance=ExtResource( 2 )]
position = Vector2( 344, 560 )

[node name="Cost3" parent="." instance=ExtResource( 2 )]
position = Vector2( 448, 560 )

[node name="Cost4" parent="." instance=ExtResource( 2 )]
position = Vector2( 552, 560 )

[node name="Cost5" parent="." instance=ExtResource( 2 )]
position = Vector2( 656, 560 )

[connection signal="scrolling" from="RecipeBrowser/VScrollBar2" to="." method="_on_scroll"]
[connection signal="pressed" from="Craft" to="." method="_on_craft_pressed"]
